; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_load_user_labels.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_load_user_labels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"You must specify a filename\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"Loaded %d labels\0A\00", align 1
@symtable_user_size = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @load_user_labels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_user_labels(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca [256 x i8], align 16
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %166

12:                                               ; preds = %1
  %13 = load i8*, i8** %2, align 8
  %14 = call i32* @fopen(i8* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %14, i32** %3, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i8*, i8** %2, align 8
  %19 = call i32 @perror(i8* %18)
  br label %166

20:                                               ; preds = %12
  %21 = call i32 (...) @free_user_labels()
  br label %22

22:                                               ; preds = %157, %156, %132, %125, %20
  %23 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %24 = load i32*, i32** %3, align 8
  %25 = call i64 @fgets(i8* %23, i32 256, i32* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %161

27:                                               ; preds = %22
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %28 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  store i8* %28, i8** %5, align 8
  br label %29

29:                                               ; preds = %112, %27
  %30 = load i8*, i8** %5, align 8
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %115

34:                                               ; preds = %29
  %35 = load i8*, i8** %5, align 8
  %36 = load i8, i8* %35, align 1
  %37 = sext i8 %36 to i32
  %38 = icmp sge i32 %37, 48
  br i1 %38, label %39, label %54

39:                                               ; preds = %34
  %40 = load i8*, i8** %5, align 8
  %41 = load i8, i8* %40, align 1
  %42 = sext i8 %41 to i32
  %43 = icmp sle i32 %42, 57
  br i1 %43, label %44, label %54

44:                                               ; preds = %39
  %45 = load i32, i32* %6, align 4
  %46 = shl i32 %45, 4
  %47 = load i8*, i8** %5, align 8
  %48 = load i8, i8* %47, align 1
  %49 = sext i8 %48 to i32
  %50 = add i32 %46, %49
  %51 = sub i32 %50, 48
  store i32 %51, i32* %6, align 4
  %52 = load i32, i32* %7, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %7, align 4
  br label %111

54:                                               ; preds = %39, %34
  %55 = load i8*, i8** %5, align 8
  %56 = load i8, i8* %55, align 1
  %57 = sext i8 %56 to i32
  %58 = icmp sge i32 %57, 65
  br i1 %58, label %59, label %75

59:                                               ; preds = %54
  %60 = load i8*, i8** %5, align 8
  %61 = load i8, i8* %60, align 1
  %62 = sext i8 %61 to i32
  %63 = icmp sle i32 %62, 70
  br i1 %63, label %64, label %75

64:                                               ; preds = %59
  %65 = load i32, i32* %6, align 4
  %66 = shl i32 %65, 4
  %67 = load i8*, i8** %5, align 8
  %68 = load i8, i8* %67, align 1
  %69 = sext i8 %68 to i32
  %70 = add i32 %66, %69
  %71 = sub i32 %70, 65
  %72 = add i32 %71, 10
  store i32 %72, i32* %6, align 4
  %73 = load i32, i32* %7, align 4
  %74 = add nsw i32 %73, 1
  store i32 %74, i32* %7, align 4
  br label %110

75:                                               ; preds = %59, %54
  %76 = load i8*, i8** %5, align 8
  %77 = load i8, i8* %76, align 1
  %78 = sext i8 %77 to i32
  %79 = icmp sge i32 %78, 97
  br i1 %79, label %80, label %96

80:                                               ; preds = %75
  %81 = load i8*, i8** %5, align 8
  %82 = load i8, i8* %81, align 1
  %83 = sext i8 %82 to i32
  %84 = icmp sle i32 %83, 102
  br i1 %84, label %85, label %96

85:                                               ; preds = %80
  %86 = load i32, i32* %6, align 4
  %87 = shl i32 %86, 4
  %88 = load i8*, i8** %5, align 8
  %89 = load i8, i8* %88, align 1
  %90 = sext i8 %89 to i32
  %91 = add i32 %87, %90
  %92 = sub i32 %91, 97
  %93 = add i32 %92, 10
  store i32 %93, i32* %6, align 4
  %94 = load i32, i32* %7, align 4
  %95 = add nsw i32 %94, 1
  store i32 %95, i32* %7, align 4
  br label %109

96:                                               ; preds = %80, %75
  %97 = load i32, i32* %7, align 4
  %98 = icmp sge i32 %97, 4
  br i1 %98, label %99, label %100

99:                                               ; preds = %96
  br label %115

100:                                              ; preds = %96
  %101 = load i8*, i8** %5, align 8
  %102 = load i8, i8* %101, align 1
  %103 = sext i8 %102 to i32
  %104 = icmp eq i32 %103, 45
  br i1 %104, label %105, label %106

105:                                              ; preds = %100
  br label %115

106:                                              ; preds = %100
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %107

107:                                              ; preds = %106
  br label %108

108:                                              ; preds = %107
  br label %109

109:                                              ; preds = %108, %85
  br label %110

110:                                              ; preds = %109, %64
  br label %111

111:                                              ; preds = %110, %44
  br label %112

112:                                              ; preds = %111
  %113 = load i8*, i8** %5, align 8
  %114 = getelementptr inbounds i8, i8* %113, i32 1
  store i8* %114, i8** %5, align 8
  br label %29

115:                                              ; preds = %105, %99, %29
  %116 = load i8*, i8** %5, align 8
  %117 = load i8, i8* %116, align 1
  %118 = sext i8 %117 to i32
  %119 = icmp ne i32 %118, 32
  br i1 %119, label %120, label %126

120:                                              ; preds = %115
  %121 = load i8*, i8** %5, align 8
  %122 = load i8, i8* %121, align 1
  %123 = sext i8 %122 to i32
  %124 = icmp ne i32 %123, 9
  br i1 %124, label %125, label %126

125:                                              ; preds = %120
  br label %22

126:                                              ; preds = %120, %115
  %127 = load i32, i32* %6, align 4
  %128 = icmp ugt i32 %127, 65535
  br i1 %128, label %132, label %129

129:                                              ; preds = %126
  %130 = load i32, i32* %7, align 4
  %131 = icmp sgt i32 %130, 8
  br i1 %131, label %132, label %133

132:                                              ; preds = %129, %126
  br label %22

133:                                              ; preds = %129
  br label %134

134:                                              ; preds = %147, %133
  %135 = load i8*, i8** %5, align 8
  %136 = getelementptr inbounds i8, i8* %135, i32 1
  store i8* %136, i8** %5, align 8
  br label %137

137:                                              ; preds = %134
  %138 = load i8*, i8** %5, align 8
  %139 = load i8, i8* %138, align 1
  %140 = sext i8 %139 to i32
  %141 = icmp eq i32 %140, 32
  br i1 %141, label %147, label %142

142:                                              ; preds = %137
  %143 = load i8*, i8** %5, align 8
  %144 = load i8, i8* %143, align 1
  %145 = sext i8 %144 to i32
  %146 = icmp eq i32 %145, 9
  br label %147

147:                                              ; preds = %142, %137
  %148 = phi i1 [ true, %137 ], [ %146, %142 ]
  br i1 %148, label %134, label %149

149:                                              ; preds = %147
  %150 = load i8*, i8** %5, align 8
  %151 = call i32 @Util_chomp(i8* %150)
  %152 = load i8*, i8** %5, align 8
  %153 = load i8, i8* %152, align 1
  %154 = sext i8 %153 to i32
  %155 = icmp eq i32 %154, 0
  br i1 %155, label %156, label %157

156:                                              ; preds = %149
  br label %22

157:                                              ; preds = %149
  %158 = load i8*, i8** %5, align 8
  %159 = load i32, i32* %6, align 4
  %160 = call i32 @add_user_label(i8* %158, i32 %159)
  br label %22

161:                                              ; preds = %22
  %162 = load i32*, i32** %3, align 8
  %163 = call i32 @fclose(i32* %162)
  %164 = load i32, i32* @symtable_user_size, align 4
  %165 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i32 %164)
  br label %166

166:                                              ; preds = %161, %17, %10
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @free_user_labels(...) #1

declare dso_local i64 @fgets(i8*, i32, i32*) #1

declare dso_local i32 @Util_chomp(i8*) #1

declare dso_local i32 @add_user_label(i8*, i32) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
